add new html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="nav_bar">
         <ul>
-            <li><a href="/action"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="abc.html"><i class="fa-solid fa-house"></i>Home</a></li>
             <li><a href="/action"><i class="fa-solid fa-image"></i>About</a></li>
             <li><a href="/action"><i class="fa-solid fa-image"></i>Galary</a></li>
             <li><a href="/action"><i class="fa-solid fa-phone"></i>contact</a></li>
